duniverse/menhirLib.20200211/test/static/bad/lots-of-errors-c.mly
%type <int> INT
%token ( BAZ QUUX /* the error is the opening parenthesis */
%token HOP

%%

main: HOP BAZ QUUX { () }

